--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="/IMAGES/compa-burger-logo.png" alt="Compa Burger Logo" class="logo">
+    <img src="IMAGES/compa-burger-logo.png" alt="Compa Burger Logo" class="logo">
     <div class="button-container">
-        <a href="/IMAGES/hamburguesas.png" class="menu-button">Hamburguesas</a>
+        <a href="IMAGES/hamburguesas.png" class="menu-button">Hamburguesas</a>
         <a href="#" class="menu-button">Hot Dogs y Salchipulpos</a>
         <a href="#" class="menu-button">Bebidas</a>
     </div>
