--- a/HTML/hamburguesas.html
+++ b/HTML/hamburguesas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="menu-page">
-        <img src="/IMAGES/hamburguesas.png" alt="Menu de Hamburguesas" class="menu-image">
+        <img src="IMAGES/hamburguesas.png" alt="Menu de Hamburguesas" class="menu-image">
     </div>
 </body>
 </html>
